crazy switch expressions